<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/login_field">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_admin_login"
        android:textColor="@color/text_white"
        android:fontFamily="@font/vazir_bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edt_admin_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_username"
        android:background="@drawable/bg_settings_card"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_gray"
        android:paddingHorizontal="12dp"
        android:gravity="right|center_vertical"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/edt_admin_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/bg_settings_card"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_gray"
        android:paddingHorizontal="12dp"
        android:gravity="right|center_vertical"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_dialog_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_login"
        android:backgroundTint="@color/primary_blue"
        android:textColor="@color/text_white"
        android:fontFamily="@font/vazir_bold"/>

</LinearLayout>