<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_menu"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_timer_title"
        android:textColor="@color/text_white"
        android:fontFamily="@font/vazir_bold"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/btn_timer_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_info_bg"
        android:text="@string/sleep_timer_15"
        android:textColor="@color/accent_cyan"
        android:fontFamily="@font/vazir_regular"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="14dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/btn_timer_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_info_bg"
        android:text="@string/sleep_timer_30"
        android:textColor="@color/accent_cyan"
        android:fontFamily="@font/vazir_regular"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="14dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/btn_timer_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_info_bg"
        android:text="@string/sleep_timer_60"
        android:textColor="@color/accent_cyan"
        android:fontFamily="@font/vazir_regular"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="14dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/btn_timer_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_info_bg"
        android:text="@string/sleep_timer_turn_off"
        android:textColor="@color/timer_accent_red"
        android:fontFamily="@font/vazir_bold"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="14dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>